apps/oss/base/oss-register-site/oss-register-site-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: register-oss-site-svc
spec:
  ports:
    - port: 4321
      targetPort: http
