apps/oss/base/oss-register-site/oss-register-site-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oss-register-site-ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: set-in-overlay
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: register-oss-site-svc
                port:
                  number: 4321
  tls:
    - hosts:
        - set-in-overlay
      secretName: oss-register-site-tls
